fix save clipping

--- a/style.css
+++ b/style.css
@@ -508,7 +508,6 @@ input[type='range']::-webkit-slider-thumb {
 .save-grid,
 .item {
     width: auto;
-    max-width: 220px;
     height: 100%;
     min-height: 400px;
     margin: auto;
